[gd_scene load_steps=28 format=4 uid="uid://vlf0qboc4y6q"]

[ext_resource type="Script" path="res://battle.gd" id="1_7sfm4"]
[ext_resource type="Texture2D" uid="uid://b86bno1lg0kpt" path="res://assets/gfx/frames/1.png" id="1_oxp8w"]
[ext_resource type="Texture2D" uid="uid://canfxnh1rbpb8" path="res://assets/gfx/font/english.png" id="2_7sfm4"]
[ext_resource type="Texture2D" uid="uid://bul1cabxundcn" path="res://assets/gfx/battle/balls.png" id="4_0npn6"]
[ext_resource type="Texture2D" uid="uid://c24dsqxj5hb2c" path="res://assets/gfx/battle/enemy_hp_bar_border.png" id="5_mhv3b"]
[ext_resource type="Texture2D" uid="uid://bj66ih84phjqy" path="res://assets/gfx/battle/expbar.png" id="6_lcjiy"]
[ext_resource type="Texture2D" uid="uid://bbw1jf08twnxr" path="res://assets/gfx/battle/hp_exp_bar_border.png" id="7_ol6im"]
[ext_resource type="Texture2D" uid="uid://bfr3jcf4epsp8" path="res://assets/gfx/font/font_battle_extra.png" id="8_mhv3b"]
[ext_resource type="FontFile" uid="uid://bkwfpe32wgwwx" path="res://assets/gfx/font/font.png" id="9_lcjiy"]
[ext_resource type="Texture2D" uid="uid://d0n6cp53akwkk" path="res://assets/gfx/pokemon/bulbasaur/front.png" id="10_d6qiu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i431l"]
texture = ExtResource("1_oxp8w")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6t8i5"]
texture = ExtResource("2_7sfm4")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b1i6x"]
texture = ExtResource("4_0npn6")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sl0w2"]
texture = ExtResource("5_mhv3b")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_elvfr"]
texture = ExtResource("6_lcjiy")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4s0ev"]
texture = ExtResource("7_ol6im")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lcjiy"]
texture = ExtResource("8_mhv3b")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0

[sub_resource type="TileSet" id="TileSet_dw4jg"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_i431l")
sources/1 = SubResource("TileSetAtlasSource_6t8i5")
sources/2 = SubResource("TileSetAtlasSource_b1i6x")
sources/3 = SubResource("TileSetAtlasSource_sl0w2")
sources/4 = SubResource("TileSetAtlasSource_elvfr")
sources/5 = SubResource("TileSetAtlasSource_4s0ev")
sources/7 = SubResource("TileSetAtlasSource_lcjiy")

[sub_resource type="AtlasTexture" id="AtlasTexture_i431l"]
atlas = ExtResource("2_7sfm4")
region = Rect2(104, 48, 8, 8)

[sub_resource type="LabelSettings" id="LabelSettings_ol6im"]
line_spacing = 8.0
font = ExtResource("9_lcjiy")
font_size = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_70p8l"]
atlas = ExtResource("10_d6qiu")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_73b5u"]
atlas = ExtResource("10_d6qiu")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8rr5"]
atlas = ExtResource("10_d6qiu")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5wvy"]
atlas = ExtResource("10_d6qiu")
region = Rect2(0, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_env1y"]
atlas = ExtResource("10_d6qiu")
region = Rect2(0, 160, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5crsq"]
atlas = ExtResource("10_d6qiu")
region = Rect2(0, 200, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_15qyj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70p8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73b5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8rr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5wvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_env1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5crsq")
}],
"loop": true,
"name": &"bulbasaur_front",
"speed": 5.0
}]

[node name="BattleScreen" type="ColorRect"]
texture_filter = 1
custom_minimum_size = Vector2(160, 144)
offset_right = 160.0
offset_bottom = 144.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_7sfm4")

[node name="LayerBalls" type="TileMapLayer" parent="."]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAADAAMAAgADAAAAAAAEAAMAAgADAAAAAAAFAAMAAgADAAAAAAAGAAMAAgADAAAAAAAHAAMAAgADAAAAAAAIAAMAAgAAAAAAAAALAAoAAgAAAAAAAAAMAAoAAgADAAAAAAANAAoAAgADAAAAAAAOAAoAAgADAAAAAAAPAAoAAgADAAAAAAAQAAoAAgADAAAAAAA=")
tile_set = SubResource("TileSet_dw4jg")

[node name="LayerBattle" type="TileMapLayer" parent="."]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAASAAkAAwAAAAAAAAARAAkABQADAAAAAAAQAAkABQADAAAAAAAPAAkABQADAAAAAAAOAAkABQADAAAAAAANAAkABQADAAAAAAAMAAkABQADAAAAAAALAAkABwABAAAAAAAKAAkABwAAAAAAAAADAAIABwABAAAAAAACAAIABwAAAAAAAAAEAAIABwACAAAAAAAFAAIABwACAAAAAAAGAAIABwACAAAAAAAHAAIABwACAAAAAAAIAAIABwACAAAAAAAJAAIABwACAAAAAAAKAAIABwALAAAAAAAGAAEABwAOAAAAAAAOAAgABwAOAAAAAAAOAAoAAQADAAcAAAA=")
tile_set = SubResource("TileSet_dw4jg")

[node name="LayerOverlay" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAAAA8AAAABAAEAAAAAABEAAAAAAAIAAAAAABAAAAABAAEAAAAAAA4AAAABAAEAAAABABEAAAABAAAAAAACABEAAAABAAAAAAADABEAAAABAAAAAAAEABEAAAABAAAAAAAFABEAAAABAAAAAAAGABEAAAABAAAAAAAHABEAAAABAAAAAAAIABEAAAABAAAAAAAJABEAAAABAAAAAAAKABEAAAABAAAAAAALABEAAAABAAAAAAAMABEAAAABAAAAAAANABEAAAABAAAAAAAOABEAAAABAAAAAAAPABEAAAABAAAAAAAQABEAAAABAAAAAAARABEAAAABAAAAAAASABEAAAABAAAAAAATABEAAAABAAIAAAATABAAAAABAAEAAAATAA8AAAABAAEAAAATAA4AAAABAAEAAAASAAwAAAABAAAAAAARAAwAAAABAAAAAAAQAAwAAAABAAAAAAAPAAwAAAABAAAAAAAOAAwAAAABAAAAAAANAAwAAAABAAAAAAAMAAwAAAABAAAAAAALAAwAAAABAAAAAAAKAAwAAAABAAAAAAAJAAwAAAABAAAAAAAIAAwAAAABAAAAAAAHAAwAAAABAAAAAAAGAAwAAAABAAAAAAAFAAwAAAABAAAAAAAEAAwAAAABAAAAAAADAAwAAAABAAAAAAACAAwAAAABAAAAAAABAAwAAAABAAAAAAAAAAwAAAAAAAAAAAATAAwAAAAAAAEAAAATAA0AAAABAAEAAAAAAA0AAAABAAEAAAASAAsABAAHAAAAAAARAAsABAAAAAAAAAAQAAsABAAAAAAAAAAPAAsABAAAAAAAAAAOAAsABAAAAAAAAAANAAsABAAAAAAAAAAMAAsABAAAAAAAAAALAAsABAAAAAAAAAAKAAsABAAAAAAAAAAJAAsAAwADAAAAAAASAAoAAwABAAAAABABAAIAAwABAAAAAAABAAMAAwABAAAAAAABAAQABQABAAAAAAACAAQABQADAAAAAAADAAQABQADAAAAAAAEAAQABQADAAAAAAAFAAQABQADAAAAAAAGAAQABQADAAAAAAAHAAQABQADAAAAAAAIAAQABQADAAAAAAAJAAQABQADAAAAAAAKAAQABQAFAAAAAAA=")
tile_set = SubResource("TileSet_dw4jg")

[node name="LayerMenu" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAQAA4AAQABAAYAAAARAA4AAQACAAYAAAAQABAAAQABAAEAAAARABAAAQAEAAEAAAASABAAAQANAAAAAAAKAA4AAQAFAAAAAAALAA4AAQAIAAAAAAAMAA4AAQAGAAAAAAANAA4AAQAHAAAAAAAOAA4AAQADAAEAAAAKABAAAQAPAAAAAAALABAAAQAAAAAAAAAMABAAAQACAAAAAAANABAAAQAKAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAABAAEAAAAIAA4AAAABAAEAAAAIAA8AAAABAAEAAAAIABEAAAAAAAIAAAAIABAAAAABAAEAAAAJAAwAAAABAAAAAAAKAAwAAAABAAAAAAALAAwAAAABAAAAAAAMAAwAAAABAAAAAAANAAwAAAABAAAAAAAOAAwAAAABAAAAAAAPAAwAAAABAAAAAAAQAAwAAAABAAAAAAARAAwAAAABAAAAAAASAAwAAAABAAAAAAAJABEAAAABAAAAAAAKABEAAAABAAAAAAALABEAAAABAAAAAAAMABEAAAABAAAAAAANABEAAAABAAAAAAAOABEAAAABAAAAAAAPABEAAAABAAAAAAAQABEAAAABAAAAAAARABEAAAABAAAAAAASABEAAAABAAAAAAATABEAAAABAAIAAAATABAAAAABAAEAAAATAA8AAAABAAEAAAATAA4AAAABAAEAAAATAA0AAAABAAEAAAATAAwAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_dw4jg")

[node name="LayerFight" type="TileMapLayer" parent="."]
unique_name_in_owner = true
visible = false
tile_map_data = PackedByteArray("AAAEAAwAAAABAAAAAAAEAA4AAAABAAEAAAAEAA0AAAABAAEAAAAEAA8AAAABAAEAAAAEABAAAAABAAEAAAAEABEAAAAAAAIAAAAFABEAAAABAAAAAAAGABEAAAABAAAAAAAHABEAAAABAAAAAAAIABEAAAABAAAAAAAJABEAAAABAAAAAAAKABEAAAABAAAAAAALABEAAAABAAAAAAAMABEAAAABAAAAAAANABEAAAABAAAAAAAOABEAAAABAAAAAAAPABEAAAABAAAAAAAQABEAAAABAAAAAAARABEAAAABAAAAAAASABEAAAABAAAAAAATABEAAAABAAIAAAATABAAAAABAAEAAAATAA8AAAABAAEAAAATAA4AAAABAAEAAAATAA0AAAABAAEAAAATAAwAAAAAAAEAAAASAAwAAAABAAAAAAARAAwAAAABAAAAAAAQAAwAAAABAAAAAAAPAAwAAAABAAAAAAAOAAwAAAABAAAAAAANAAwAAAABAAAAAAAMAAwAAAABAAAAAAALAAwAAAABAAAAAAAKAAwAAAABAAIAAAAJAAwAAAABAAAAAAAIAAwAAAABAAAAAAAHAAwAAAABAAAAAAAGAAwAAAABAAAAAAAFAAwAAAABAAAAAAADAAwAAAABAAAAAAACAAwAAAABAAAAAAABAAwAAAABAAAAAAAAAAwAAAAAAAIAAAAKAAsAAAABAAEAAAAKAAoAAAABAAEAAAAKAAkAAAABAAEAAAAAAAkAAAABAAEAAAAAAAsAAAABAAEAAAAAAAoAAAABAAEAAAACAAoAAQAKAAMAAAADAAoAAQAKAAMAAAAEAAoAAQAKAAMAAAAFAAoAAQAKAAMAAAAGAAoAAQAKAAMAAAAJAAoAAQAKAAMAAAAJAAsAAQAKAAMAAAAIAAsAAQAKAAMAAAAHAAsAAQADAAcAAAAGAAsAAQAKAAMAAAAFAAsAAQAKAAMAAAAEAAsAAQAKAAMAAAADAAsAAQAKAAMAAAACAAsAAQAKAAMAAAABAAsAAQAKAAMAAAAFAA0AAQAKAAMAAAAGAA0AAQAKAAMAAAAHAA0AAQAKAAMAAAAIAA0AAQAKAAMAAAAJAA0AAQAKAAMAAAAKAA0AAQAKAAMAAAALAA0AAQAKAAMAAAAMAA0AAQAKAAMAAAANAA0AAQAKAAMAAAAOAA0AAQAKAAMAAAAPAA0AAQAKAAMAAAAQAA0AAQAKAAMAAAARAA0AAQAKAAMAAAASAA0AAQAKAAMAAAASAA4AAQAKAAMAAAARAA4AAQAKAAMAAAAQAA4AAQAKAAMAAAAPAA4AAQAKAAMAAAAOAA4AAQAKAAMAAAANAA4AAQAKAAMAAAAMAA4AAQAKAAMAAAALAA4AAQAKAAMAAAAKAA4AAQAKAAMAAAAJAA4AAQAKAAMAAAAIAA4AAQAKAAMAAAAHAA4AAQAKAAMAAAAGAA4AAQAKAAMAAAAFAA4AAQAKAAMAAAAFAA8AAQAKAAMAAAAGAA8AAQAKAAMAAAAHAA8AAQAKAAMAAAAIAA8AAQAKAAMAAAAJAA8AAQAKAAMAAAAKAA8AAQAKAAMAAAALAA8AAQAKAAMAAAAMAA8AAQAKAAMAAAANAA8AAQAKAAMAAAAOAA8AAQAKAAMAAAAPAA8AAQAKAAMAAAAQAA8AAQAKAAMAAAARAA8AAQAKAAMAAAASAA8AAQAKAAMAAAASABAAAQAKAAMAAAARABAAAQAKAAMAAAAQABAAAQAKAAMAAAAPABAAAQAKAAMAAAAOABAAAQAKAAMAAAANABAAAQAKAAMAAAAMABAAAQAKAAMAAAALABAAAQAKAAMAAAAKABAAAQAKAAMAAAAJABAAAQAKAAMAAAAIABAAAQAKAAMAAAAHABAAAQAKAAMAAAAGABAAAQAKAAMAAAAFABAAAQAKAAMAAAAAAAgAAAAAAAAAAAAKAAgAAAAAAAEAAAAJAAgAAAABAAAAAAAIAAgAAAABAAAAAAAHAAgAAAABAAAAAAAGAAgAAAABAAAAAAAFAAgAAAABAAAAAAAEAAgAAAABAAAAAAADAAgAAAABAAAAAAACAAgAAAABAAAAAAABAAgAAAABAAAAAAABAAkAAQADAAEAAAACAAkAAQAIAAEAAAADAAkAAQAPAAAAAAAEAAkAAQAEAAAAAAAFAAkAAQADAAcAAAA=")
tile_set = SubResource("TileSet_dw4jg")

[node name="SpriteArrow" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(76, 116)
texture = SubResource("AtlasTexture_i431l")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 8.0
offset_top = 112.0
offset_right = 40.0
offset_bottom = 136.0
text = "text"
label_settings = SubResource("LabelSettings_ol6im")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_15qyj")
animation = &"bulbasaur_front"
